# manus_ros2

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  entrypoint.sh  run.sh
ext/MANUS_Core_2.3.0.1_SDK/ManusSDK_v2.3.0.1/SDKClient/: SDKClient.sln
ext/MANUS_Core_2.3.0.1_SDK/ManusSDK_v2.3.0.1/SDKClient/SDKClient/: .editorconfig  .gitignore  HowToUseSDKClient.txt  Main.cpp  ManusCoreSDKIntroduction.dox  SDKClient.cpp  SDKClient.hpp  SDKClient.vcxproj  SDKClient.vcxproj.filters  packages.config
ext/MANUS_Core_2.3.0.1_SDK/ManusSDK_v2.3.0.1/SDKClient/SDKClient/PlatformSpecific/Windows/: ClientPlatformSpecific.cpp  ClientPlatformSpecificTypes.hpp
ext/MANUS_Core_2.3.0.1_SDK/ManusSDK_v2.3.0.1/SDKClient/SDKMinimalClient/: HowToUseSDKMinimalClient.txt  ManusSDK.h  ManusSDKTypeInitializers.h  ManusSDKTypes.h  SDKMinimalClient.cpp  SDKMinimalClient.vcxproj  SDKMinimalClient.vcxproj.bak  SDKMinimalClient.vcxproj.filters
ext/MANUS_Core_2.3.0.1_SDK/ManusSDK_v2.3.0.1/SDKClient/SDKMinimalClient_Linux/: Dockerfile  Makefile  SDKMinimalClient.cpp  SDKMinimalClient.hpp  SDKMinimalClient_Linux.vcxproj  SDKMinimalClient_Linux.vcxproj.filters
ext/MANUS_Core_2.3.0.1_SDK/ManusSDK_v2.3.0.1/SDKClient/SDKMinimalClient_Linux/ManusSDK/include/: ManusSDKTypes.h
ext/MANUS_Core_2.3.0.1_SDK/ManusSDK_v2.3.0.1/SDKClient/SDKMinimalClient_Linux/ManusSDK/lib/: .gitattributes
src/: SDKMinimalClient.cpp  SDKMinimalClient.hpp  manus_ros2.cpp  tracker_tf.hpp
